Updated and fixed services;

--- a/Lead.html
+++ b/Lead.html
@@ -27,14 +27,31 @@
                         <div class="scroll">
                             <h4>Lead Generation</h4>
                             <p class="grey-text">We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</p>
-                            <ul class="grey-text paragraph">
-                                <li><i class="material-icons bulleted">brightness_1</i> Content Marketing</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Social Media Marketing</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> SEO</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Website Optimization</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Email Marketing</li>
-                            </ul>
+
+                            <table class="grey-text paragraph">
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td> Content Marketing</td>                                
+                                </tr>
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td> Social Media Marketing</td>                                
+                                </tr>
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td> SEO</td>                                
+                                </tr>
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td> Website Optimization</td>                                
+                                </tr>
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td> Email Marketing</td>                                
+                                </tr>
+                            </table>
                             <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+                            <div style="height: 200px;"></div>
                         </div>
                     </div>
                 </div>
