--- a/backend.html
+++ b/backend.html
@@ -27,19 +27,50 @@
                         <div class="scroll">
                             <h4>Customer Support (Back End)</h4>
                             <p class="grey-text">Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. We at Deegeelab can do the following back-end customer support processes:</p>
-                            <ul class="grey-text paragraph">
-                                <li><i class="material-icons bulleted">brightness_1</i> Handle office admin processes</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Attract new customers into your systems.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Enter data in a CRM system or update customer records</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Digitize your business to increase its accessibility.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Handle emails Inbound/Outbound Chat Support</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Handle all paperwork that can be processed online</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> File documents</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Send electronic paper transactions</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Manage Accounting Applications</li>
-                            </ul>
+                            <table class="grey-text paragraph">
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Handle office admin processes</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Attract new customers into your systems.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Enter data in a CRM system or update customer records</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Digitize your business to increase its accessibility.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Handle emails Inbound/Outbound Chat Support</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Handle all paperwork that can be processed online</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>File documents</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Send electronic paper transactions</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Manage Accounting Applications</td>                                
+                                </tr>                                
+                            </table>
                             <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+                            <div style="height: 200px;"></div>
                         </div>
                     </div>
                 </div>
