--- a/frontend.html
+++ b/frontend.html
@@ -27,21 +27,57 @@
                         <div class="scroll">
                             <h4>Customer Support (Front End)</h4>
                             <p class="grey-text">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers. We provide on going support to the customers in order to keep the business running as smoothly as possible.</p>
-                            <ul class="grey-text paragraph">
-                                <li><i class="material-icons bulleted">brightness_1</i> Resolve customer complaints via phone, email, mail, or social media.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Use telephones to reach out to customers.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Advise on company information.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Act as the company gatekeeper.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Suggest solutions for customer problems.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Inform customer of deals and promotions.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Sell products and services.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Utilize computer technology to handle high call volumes.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Work with customer service manager to ensure proper customer service is being delivered.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Close out or open call records.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Read from scripts.</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Handle changes in service policies or renewals.</li>
-                            </ul>
+                            <table class="grey-text paragraph">
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Resolve customer complaints via phone, email, mail, or social media.</td>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Use telephones to reach out to customers.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Advise on company information.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Act as the company gatekeeper.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Suggest solutions for customer problems.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Inform customer of deals and promotions.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Sell products and services.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Utilize computer technology to handle high call volumes.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Work with customer service manager to ensure proper customer service is being delivered.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Close out or open call records.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Read from scripts.</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Handle changes in service policies or renewals.</td>                                
+                                </tr>                                
+                            </table>
                             <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+                            <div style="height: 200px;"></div>
                         </div>
                     </div>
                 </div>
