--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                                     <i class="material-icons left">mail_outline</i> 
                                                     <span>info@deegeelab.com</span>
                                                 </li>
-                                                <li class="row">
+                                                <li class="row hide">
                                                     <i class="material-icons left">phone</i></span>
                                                     <span>0948 999 9988</span>
                                                 </li>
