--- a/marketing.html
+++ b/marketing.html
@@ -18,28 +18,59 @@
     <body class="bgpillars fullwidth">
         <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
             <div class="section" style="padding: 0 !important;">
-                <div class="white" id='display_desktop'>
+                <div class="white">
                     <div class="col s12 m6 l6" id='marketing'>
                         <a href="#" data-activates="menu" class="btn-flat btn-floating grey-text darken-4 menu"><i class="material-icons">menu</i></a>
                         <div class='service-banner'></div>
                     </div>
-                    <div class="col s12 m6 l6 services-content" >
+                    <div class="col s10 m6 l6 offset-s1 services-content">
                         <div class="scroll">
                             <h4>Digital Marketing</h4>
                             <p class="grey-text">We develop customised digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. To give our clients the winning edge that they deserve we do the following:</p>
-                            <ul class="grey-text paragraph">
-                                <li><i class="material-icons bulleted">brightness_1</i> Develop and implement SEO and PPC strategies</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Create and manage link building strategies, content marketing strategies, and social media presences</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Innovate and present new marketing platforms and strategies</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Develop engaging online content including clickbait, forums, videos, graphics, and blogs; monitor and analyse content success</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Manage email and social media marketing campaigns</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Use Google Analytics, Google AdWords, and other relevant sites</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Drive traffic to client’s website</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Keep abreast of new social media sites, web technologies, and digital marketing trends; implement these new technologies in developing campaigns and update current campaigns to include recent information</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Develop website and maintain (Purchasing of Domain and Hosting not included)</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Inbound Marketing and Content Strategy</li>
-                            </ul>
+                            <table class="grey-text paragraph">
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Develop and implement SEO and PPC strategies</td>                                
+                                </tr>
+                                <tr>
+                                    <td><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Create and manage link building strategies, content marketing strategies, and social media presences</td>                                
+                                </tr>
+                                <tr>
+                                    <td><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Innovate and present new marketing platforms and strategies</td>                                
+                                </tr>
+                                <tr>
+                                    <td><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Develop engaging online content including clickbait, forums, videos, graphics, and blogs; monitor and analyse content success</td>                                
+                                </tr>
+                                <tr>
+                                    <td><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Manage email and social media marketing campaigns</td>                                
+                                </tr>
+                                <tr>
+                                    <td><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Use Google Analytics, Google AdWords, and other relevant sites</td>                                
+                                </tr>
+                                <tr>
+                                    <td><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Drive traffic to client’s website</td>                                
+                                </tr>
+                                <tr>
+                                    <td><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Keep abreast of new social media sites, web technologies, and digital marketing trends; implement these new technologies in developing campaigns and update current campaigns to include recent information</td>                                
+                                </tr>
+                                <tr>
+                                    <td><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Develop website and maintain (Purchasing of Domain and Hosting not included)</td>                                
+                                </tr>
+                                <tr>
+                                    <td><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Inbound Marketing and Content Strategy</td>                                
+                                </tr>
+                            </table>
                             <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+                            <div style="height: 200px;"></div>
                         </div>
                     </div>
                 </div>
