--- a/social.html
+++ b/social.html
@@ -27,15 +27,35 @@
                         <div class="scroll">
                             <h4>Social Media Management</h4>
                             <p class="grey-text">Social media management is a critical part of any online marketing strategy. Social media allows you to expand your network and put your business on the radar of your prospect market. Most customers spend a lot of time on social media. They reach out about their orders and send inquiries through social media.  As such, creating and managing an active social media page for your business is a must. We at Deegeelab specialize in:</p>
-                            <ul class="grey-text paragraph">
-                                <li><i class="material-icons bulleted">brightness_1</i> Creating Social Media pages (Facebook, Instagram, Twitter, LinkedIn, etc.)</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Growing your followers and reaching out to your audience</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Engaging with related social media communities</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Publishing written and graphic content that are consistent with your brand</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Replying to messages on your social media channels</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Keeping abreast with the latest social media trends in your industry</li>
-                            </ul>
+
+                            <table class="grey-text paragraph">
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td> Creating Social Media pages (Facebook, Instagram, Twitter, LinkedIn, etc.)</td>                                
+                                </tr>
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td> Growing your followers and reaching out to your audience</td>                                
+                                </tr>
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td> Engaging with related social media communities</td>                                
+                                </tr>
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td> Publishing written and graphic content that are consistent with your brand</td>                                
+                                </tr>
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td> Replying to messages on your social media channels</td>                                
+                                </tr>
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td> Keeping abreast with the latest social media trends in your industry</td>                                
+                                </tr>
+                            </table>
                             <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+                            <div style="height: 200px;"></div>
                         </div>
                     </div>
                 </div>
