--- a/webdev.html
+++ b/webdev.html
@@ -27,17 +27,42 @@
                         <div class="scroll">
                             <h4>Website Development</h4>
                             <p class="grey-text">Offering high-quality products or services is just one half of the challenge that businesses face today. In the last five years, Australia’s online shopping industry has grown rapidly. For business owners, this means that is highly recommended to have a website that has:</p>
-                            <ul class="grey-text paragraph">
-                                <li><i class="material-icons bulleted">brightness_1</i> Mobile-responsive pages</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Clear, concise and engaging written content</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Well-formatted graphics content</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Working clickable elements</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Secured data and payment channels</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Quick and smooth page navigation</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Clean and up-to-date code</li>
-                                <li><i class="material-icons bulleted">brightness_1</i> Consistently fast loading time</li>
-                            </ul>
+                            <table class="grey-text paragraph">
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Mobile-responsive pages</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Clear, concise and engaging written content</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Well-formatted graphics content</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Working clickable elements</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Secured data and payment channels</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Quick and smooth page navigation</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Clean and up-to-date code</td>                                
+                                </tr>                                
+                                <tr>
+                                    <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                    <td>Consistently fast loading time</td>                                
+                                </tr>                                
+                            </table>
                             <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
+                            <div style="height: 200px;"></div>
                         </div>
                     </div>
                 </div>
